--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "satooshi/php-coveralls": "^0.6.1"
     },
     "autoload": {
         "psr-4": {
