--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "satooshi/php-coveralls": "^0.6.1"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": {
