--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: php
 
-php:
-- 5.4
-- 5.5
-- 5.6
-  env: COLLECT_COVERAGE=true
-- 7
+matrix:
+  include:
+    - php: 5.4
+    - php: 5.5
+    - php: 5.6
+      env: COLLECT_COVERAGE=true
+    - php: 7
 
 sudo: false
 
