Fixed possible typo

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 - composer require satooshi/php-coveralls --dev
 
 script:
-- if [[ "$COLLECT_COVERAGE" == "true" ]]; then php vendor/phpunit/phpunit/phpunit --coverage-clover build/logs/clover.xml else php vendor/phpunit/phpunit/phpunit fi
+- if [[ "$COLLECT_COVERAGE" == "true" ]]; then php vendor/phpunit/phpunit/phpunit --coverage-clover build/logs/clover.xml; else php vendor/phpunit/phpunit/phpunit; fi
 
 after_script:
-- if [[ "$COLLECT_COVERAGE" == "true" ]]; then php vendor/bin/coveralls fi
+- if [[ "$COLLECT_COVERAGE" == "true" ]]; then php vendor/bin/coveralls; fi
