--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Artur Weigandt",
-            "email": "art4@wlabs.net",
+            "email": "art4@wlabs.de",
             "homepage": "http://wlabs.de"
         }
     ],
