--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,19 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": "^5.4 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "^4.8.35"
     },
     "autoload": {
         "psr-4": {
             "Art4\\JsonApiClient\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Art4\\JsonApiClient\\Tests\\": "tests"
         }
     }
 }
