--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^5.4 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.35"
+        "phpunit/phpunit": "^4.8.35 || ^6.0"
     },
     "autoload": {
         "psr-4": {
