--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: php
 
 matrix:
   include:
-    - php: 5.5
     - php: 5.6
     - php: 7.0
     - php: 7.1
+    - php: 7.2
       env: COLLECT_COVERAGE=true
+    - php: nightly
+  allow_failures:
+    - php: nightly
 
 sudo: false
 
