--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: php
+sudo: false
 
+php:
+  - 7.2
+  - 7.1
+  - 7.0
+  - 5.6
 matrix:
+  fast_finish: true
   include:
-    - php: 5.6
-    - php: 7.0
-    - php: 7.1
-    - php: 7.2
-      env: COLLECT_COVERAGE=true
     - php: nightly
+    - env: COLLECT_COVERAGE=true
   allow_failures:
     - php: nightly
-
-sudo: false
+    - env: COLLECT_COVERAGE=true
 
 before_install:
 - travis_retry composer self-update
