--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.4.3 || ^6.0"
+        "phpunit/phpunit": "^5.4.3 || ^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
