--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ matrix:
   include:
     - php: nightly
     - env: COLLECT_COVERAGE=true
+      php: 7.2
   allow_failures:
     - php: nightly
     - env: COLLECT_COVERAGE=true
+      php: 7.2
 
 before_install:
 - travis_retry composer self-update
