--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0"
+        "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.4.3 || ^6.0 || ^7.0"
+        "phpunit/phpunit": "^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -30,7 +30,7 @@
     },
     "config": {
         "//platform": {
-            "php": "5.6"
+            "php": "7.2"
         },
         "sort-packages": true
     }
