--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^7.0"
+        "phpunit/phpunit": "^6 || ^7 || ^8"
     },
     "autoload": {
         "psr-4": {
@@ -30,7 +30,7 @@
     },
     "config": {
         "//platform": {
-            "php": "5.6"
+            "php": "7.2"
         },
         "sort-packages": true
     }
