--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6 || ^7 || ^8"
+        "phpunit/phpunit": "^8 || ^9"
     },
     "autoload": {
         "psr-4": {
