--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": "^7.4 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8 || ^9"
+        "phpunit/phpunit": "^9"
     },
     "autoload": {
         "psr-4": {
@@ -30,7 +30,7 @@
     },
     "config": {
         "//platform": {
-            "php": "7.2"
+            "php": "7.4"
         },
         "sort-packages": true
     }
