--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,24 +7,16 @@ on:
 jobs:
 
   tests:
-    name: Tests
+    name: Tests (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
-        include:
-          - php: '7.4'
-          - php: '8.0'
-          - php: '8.1'
       fail-fast: true
+      matrix:
+        operating-system: ['ubuntu-latest']
+        php-versions: ['7.4', '8.0', '8.1']
 
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -32,10 +24,37 @@ jobs:
 
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
 
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        with:
+          php-version: ${{ matrix.php-versions }}
+          tools: phpunit-bridge
+          extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite
+          coverage: xdebug
 
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          # Use composer.json for key, if composer.lock is not committed.
+          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+
+      - name: Install Coveralls
+        run: composer require php-coveralls/php-coveralls:^2 --dev
+
+      - name: Run tests
+        run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+      - name: Run Coveralls
+        run: vendor/bin/php-coveralls
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
