Try setting PHP 8.2 as experimental

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,10 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         operating-system: ['ubuntu-latest']
-        php-versions: ['7.4', '8.0', '8.1', '8.2']
+        include:
+          - php-versions: '7.4'
+          - php-versions: '8.0'
+          - php-versions: '8.1'
+          - php-versions: '8.2'
+            experimental: true
 
     steps:
       - name: Checkout
