next try: usin continue-on-error in matrix include

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,8 +18,7 @@ jobs:
         include:
           - operating-system: 'ubuntu-latest'
             php-versions: '8.2'
-            env:
-              allow_failure: true
+            continue-on-error: true
 
     steps:
       - name: Checkout
@@ -52,10 +51,10 @@ jobs:
 
       - name: Install Composer dependencies
         id: composer-install
-        continue-on-error: env.allow_failure
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run tests
+        continue-on-error: false
         if: steps.composer-install.outcome == 'success' && steps.composer-install.conclusion == 'success'
         run: vendor/bin/phpunit --coverage-text
 
