--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php": "^7.4 || ^8.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.2",
         "phpstan/phpstan": "^0.12.99",
         "phpunit/phpunit": "^9"
     },
