--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
-/docs               export-ignore
-/tests              export-ignore
+/.docker            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
+/docs               export-ignore
 /phpunit.xml        export-ignore
+/tests              export-ignore
