--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
+/docker-compose.yml export-ignore
 /docs               export-ignore
 /phpunit.xml        export-ignore
 /tests              export-ignore
