--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0"
+        "php": "^7.4 || ~8.0.0 || ~8.1.0 || ~8.2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2",
@@ -30,10 +30,11 @@
             "Art4\\JsonApiClient\\Tests\\": "tests"
         }
     },
+    "scripts": {
+        "phpstan": "phpstan analyze --memory-limit 512M analyze src --level 8",
+        "phpunit": "phpunit"
+    },
     "config": {
-        "//platform": {
-            "php": "7.4"
-        },
         "sort-packages": true
     }
 }
