--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 /.docker            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/.travis.yml        export-ignore
+/.phpstan.neon      export-ignore
 /docker-compose.yml export-ignore
 /docs               export-ignore
 /phpunit.xml        export-ignore
