--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -33,4 +33,4 @@ jobs:
         uses: "ramsey/composer-install@v2"
 
       - name: Run PHPStan
-        run: vendor/bin/phpstan.phar analyze src --level 8
+        run: composer run phpstan
