--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2",
         "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9 || ^10"
     },
     "autoload": {
         "psr-4": {
