Add script to create code-coverage report

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         }
     },
     "scripts": {
+        "coverage": "phpunit --coverage-html=\".phpunit.cache/code-coverage\"",
         "phpstan": "phpstan analyze --memory-limit 512M --configuration .phpstan.neon",
         "phpunit": "phpunit"
     },
