set all files REUSE compliant
for some reasons the .gitignore entries are ignored by reuse tool
so I have to put them into .reuse/deb5 file

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2015-2023 Artur Weigandt https://wlabs.de/kontakt
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 /.docker            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
