--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2015-2023 Artur Weigandt https://wlabs.de/kontakt
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 parameters:
 	level: 8
 
