--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2015-2023 Artur Weigandt https://wlabs.de/kontakt
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 version: "3.7"
 
 services:
