--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -40,4 +40,14 @@ jobs:
           composer-options: --ignore-platform-reqs
 
       - name: Run tests
-        run: composer run phpunit -- --coverage-text
+        run: composer run phpunit -- --coverage-clover .phpunit.cache/clover.xml
+
+      - name: Upload coverage reports to Codecov
+        if: ${{ success() && matrix.php == '8.2' }}
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          files: ./.phpunit.cache/clover.xml
+          fail_ci_if_error: true
+          verbose: true
