--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: ['ubuntu-latest']
-        php: ['7.4', '8.0', '8.1', '8.2', '8.3']
+        php: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
 
     steps:
       - name: Checkout
@@ -23,18 +23,27 @@ jobs:
           fetch-depth: 2
 
       - name: Setup PHP with composer and extensions
+        if: ${{ matrix.php =< '8.3' }}
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php }}
           coverage: xdebug
           tools: none
 
+      - name: Setup PHP with composer and extensions (PHP 8.4)
+        if: ${{ matrix.php >= '8.4' }}
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: none
+          tools: none
+
       - name: "Install Composer dependencies"
-        if: ${{ matrix.php < '8.3' }}
+        if: ${{ matrix.php =< '8.3' }}
         uses: "ramsey/composer-install@v2"
 
-      - name: "Install Composer dependencies (PHP 8.3)"
-        if: ${{ matrix.php >= '8.3' }}
+      - name: "Install Composer dependencies (PHP 8.4)"
+        if: ${{ matrix.php >= '8.4' }}
         uses: "ramsey/composer-install@v2"
         with:
           composer-options: --ignore-platform-reqs
@@ -43,7 +52,7 @@ jobs:
         run: composer run phpunit -- --coverage-clover .phpunit.cache/clover.xml
 
       - name: Upload coverage reports to Codecov
-        if: ${{ success() && matrix.php == '8.2' }}
+        if: ${{ success() && matrix.php == '8.3' }}
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
