--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "reuse-annotate": "pipx run reuse annotate src tests --license=\"GPL-3.0-or-later\" --copyright=\"2015-2023 Artur Weigandt https://wlabs.de/kontakt\" --recursive --exclude-year --copyright-style=\"spdx\"",
         "reuse-lint": "pipx run reuse --suppress-deprecation lint",
         "test": [
-            "@codestyle --verbose --diff",
+            "@codestyle --diff --dry-run",
             "@phpstan",
             "@phpunit"
         ]
