--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,7 +14,12 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: ['ubuntu-latest']
-        php: ['8.1', '8.2', '8.3', '8.4']
+        php:
+          - '8.5'
+          - '8.4'
+          - '8.3'
+          - '8.2'
+          - '8.1'
 
     steps:
       - name: Checkout
@@ -30,11 +35,11 @@ jobs:
           tools: none
 
       - name: "Install Composer dependencies"
-        if: ${{ matrix.php <= '8.3' }}
+        if: ${{ matrix.php <= '8.4' }}
         uses: "ramsey/composer-install@v2"
 
-      - name: "Install Composer dependencies (PHP 8.4)"
-        if: ${{ matrix.php >= '8.4' }}
+      - name: "Install Composer dependencies (PHP 8.5)"
+        if: ${{ matrix.php >= '8.5' }}
         uses: "ramsey/composer-install@v2"
         with:
           composer-options: --ignore-platform-reqs
@@ -43,7 +48,7 @@ jobs:
         run: composer run phpunit -- --coverage-clover .phpunit.cache/clover.xml
 
       - name: Upload coverage reports to Codecov
-        if: ${{ success() && matrix.php == '8.3' }}
+        if: ${{ success() && matrix.php == '8.4' }}
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
